# DFL

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  install_tensorflow.sh  main.cpp  modification_to_caffe.md  requirements.txt
cmake/: FindGLOG.cmake  FindLMDB.cmake  FindLZ4.cmake  FindLevelDB.cmake  FindRocksDB.cmake  FindSnappy.cmake
dataset/MNIST/: lenet_solver.prototxt  lenet_solver_fed_avg.prototxt  lenet_solver_memory.prototxt  lenet_test.prototxt  lenet_train.prototxt  lenet_train_memory.prototxt  standard_caffe_lenet_MNIST.txt
dataset/MNIST/result/: snap_iter_1000.caffemodel  snap_iter_1000.solverstate  snap_iter_1500.caffemodel  snap_iter_1500.solverstate  snap_iter_2000.caffemodel  snap_iter_2000.solverstate  snap_iter_500.caffemodel  snap_iter_500.solverstate
dataset/MNIST/test-lmdb/: lock.mdb
dataset/MNIST/train-lmdb/: lock.mdb
lib/: auto_multi_thread.hpp  base64.hpp  boost_serialization_wrapper.hpp  byte_buffer.hpp  configure_file.hpp  crypto.hpp  data_convert.hpp  debug_tool.hpp  dll_importer.hpp  duplicate_checker.hpp  exception.hpp  hash_interface.hpp  info_toolkit.hpp  json_serialization.hpp  lock.hpp  lz4.hpp  measure_time.hpp  ml_layer.hpp  network.hpp  performance_profiler.hpp  rocksdb_api.hpp  serialization_tuple.hpp  tensor_blob_like.hpp  thread_pool.hpp  time_util.hpp  tmt.hpp  transaction.hpp  util.hpp
lib/backup/network-libboost/: flux_meter.hpp  (+2 more)
lib/clustering/: hierarchical_clustering.hpp
lib/crypto/: crypto_config.hpp  ecc.hpp  ecc_math_utils.hpp  ecdsa.hpp  ecdsa_openssl.hpp  hash.hpp  hex_data.hpp  md5.hpp  sha256.hpp
lib/data_converter/: caffe_data_convert.hpp  data_convert.hpp  data_converter.hpp
lib/dll_loader/: dll_importer.hpp  notice.md
lib/folly/: Asm.h  Config.h  Portability.h  RWSpinLock.h
lib/ml_layer/: caffe.hpp  caffe_model_parameters.hpp  caffe_solver_ext.hpp  data_convert.hpp  fed_avg_buffer.hpp  ml_abs.hpp  model_compress.hpp  tensor_blob_like.hpp
lib/network/: tcp_client.hpp  tcp_server.hpp
lib/network-common/: crc.hpp  i_p2p_node.hpp  i_p2p_node_with_header.hpp  packet_header.hpp
lib/network-libboost/: p2p.hpp  p2p_with_header.hpp  tcp_client.hpp  tcp_common.hpp  tcp_protocol.hpp  tcp_protocol_impl.hpp  tcp_server.hpp  tcp_simple_client.hpp  tcp_simple_client_with_header.hpp  tcp_simple_server.hpp  tcp_simple_server_with_header.hpp  tcp_status.hpp  udp.hpp
lib/network-libuv/: p2p.hpp  tcp_client.hpp  tcp_server.hpp  uv_types.hpp
paper_result/non-iid-malicious-10nodes/: draw_all_graphs.py
py_tool/: calculate_total_transmit_size.py  draw_accuracy_and_weight_diff.py  draw_accuracy_plot.py  draw_all_graphs.py  draw_model_weight_diff.py  get_accuracy_from_console_output.py  visualize_network.py
readme/: config.json.txt  simulator_config.json.txt
readme/2021-09-29 15:05:15 GMT 50 nodes, 6peer, 2 observer/: 0_reputation.csv  10_reputation.csv  11_reputation.csv  12_reputation.csv  13_reputation.csv  14_reputation.csv  15_reputation.csv  16_reputation.csv  17_reputation.csv  18_reputation.csv  19_reputation.csv  1_reputation.csv  20_reputation.csv  21_reputation.csv  22_reputation.csv  23_reputation.csv  24_reputation.csv  25_reputation.csv  26_reputation.csv  27_reputation.csv  28_reputation.csv  29_reputation.csv  2_reputation.csv  30_reputation.csv  31_reputation.csv  32_reputation.csv  33_reputation.csv  34_reputation.csv  35_reputation.csv  36_reputation.csv  37_reputation.csv  38_reputation.csv  39_reputation.csv  3_reputation.csv  40_reputation.csv  41_reputation.csv  42_reputation.csv  43_reputation.csv  44_reputation.csv  45_reputation.csv  (+13 more)
readme/sample_simulation_result/: accuracy.csv  model_weight_diff.csv  simulator_config.json
shell/: caffe_support_cudnn8.sh  install_boost.sh  install_caffe.sh  install_json.sh  install_miscellaneous.sh  install_tensorflow.sh  modify_caffe.sh  patch_caffe.sh  rename_hdf5lib_for_aarch.sh
shell/caffe_config/: CMakeLists.txt  Makefile.config
tests/: CMakeLists.txt
tests/blockchain_test/: CMakeLists.txt  block_test.cpp  dataset_storage_test.cpp  transaction_test.cpp
tests/caffe_startup/: CMakeLists.txt  boost_test.cpp  draw_numbers.py  main.cpp  mutual_train_demo.cpp  mutual_train_demo_malicious_node.cpp  mutual_train_demo_model_diff.cpp  mutual_train_demo_model_diff_none_iid.cpp  mutual_train_demo_non_iid.cpp  mutual_train_demo_non_iid_fedavg.cpp  mutual_train_demo_random_data.cpp  single_train_demo.cpp  single_train_tyd_casual_test.cpp  test_lmdb_append.cpp
tests/crypto_test/: CMakeLists.txt  main.cpp
tests/data_converter_test/: CMakeLists.txt  main.cpp
tests/dll_import_test/: CMakeLists.txt  dll_import_main.cpp  dll_interface.hpp  dll_test.cpp
tests/json_test/: CMakeLists.txt  config_test.cpp  main.cpp
tests/miscellaneous_test/: CMakeLists.txt  clustering_test.cpp  miscellaneous.cpp  miscellaneous_main.cpp  tmt_test.cpp
tests/ml_abs_test/: CMakeLists.txt  main.cpp  temp_test.cpp  test_caffe.cpp  test_caffe_serialization.cpp  test_memory_data_layer.cpp
tests/model_parameter_manager/: CMakeLists.txt  test_model_parameter_manager.cpp
tests/network_libboost_test/: CMakeLists.txt  boost_udp_sample_client.cpp  boost_udp_sample_server.cpp  test_data_medium.cpp  test_network_libboost_crc_packet.cpp  test_network_libboost_p2p.cpp  test_network_libboost_p2p_with_header.cpp  test_network_libboost_tcp_header.cpp  test_network_libboost_tcp_loopback.cpp  test_network_libboost_udp.cpp  test_tcp_crc.cpp
tests/network_libboost_test/v2/: CMakeLists.txt  test_network_libboost_tcp_server.cpp
tests/network_libuv_test/: CMakeLists.txt  test_network_libuv_cpp_loop_exit.cpp  test_network_libuv_p2p.cpp  test_network_libuv_tcp_client.cpp  test_network_libuv_tcp_echo.cpp  test_network_libuv_tcp_server.cpp  test_network_libuv_tcp_server_block.cpp
tests/network_test/: CMakeLists.txt  network_tcp_echo.cpp  test_network_tcp_client.cpp  test_network_tcp_server.cpp
tests/rocksdb_test/: CMakeLists.txt  test_rocksdb_performance.cpp
tests/tensorflow_startup/: CMakeLists.txt  main.cpp
tests/top_level_test/: CMakeLists.txt  introducer_test.cpp
(+1828 files in other folders)
