add_subdirectory(tensorflow_startup)
add_subdirectory(caffe_startup)
add_subdirectory(ml_abs_test)
add_subdirectory(crypto_test)
add_subdirectory(data_converter_test)
add_subdirectory(miscellaneous_test)
add_subdirectory(json_test)
add_subdirectory(blockchain_test)
add_subdirectory(dll_import_test)
add_subdirectory(network_libuv_test)
add_subdirectory(network_libboost_test)
add_subdirectory(rocksdb_test)
add_subdirectory(model_parameter_manager)
add_subdirectory(top_level_test)